--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
     <p>you can contact me on <a href="https://plural.cafe/@sooj" rel="me">mastodon</a> or <a href="https://twitter.com/gurolizard" rel="noopener noreferrer">twitter</a>--note that these accounts are 18+, though (this website will probably also be 18+ once it actually has content lol)</p>
     <p class="large centered">💖🔪🩸</p>
     </main>
+    <footer>source on <a href="https://github.com/gurolizard/neocities">github</a> | <a href="https://github.com/gurolizard/neocities/blob/main/LICENSE.md">license</a></footer>
   </body>
 </html>
