--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
         anime boys, and being cringe. a famous(?) thing i said once was "basically just think of the phrase 'evil twink'
         and whatever you just pictured. thats me". uh, i tend to be pretty crass and maybe have a dark sense of humor or
         smth?</p>
-      <p>i'm plural (<a href="https://www.youtube.com/watch?v=M34kR9JWWqc" rel="noopener noreferrer">learn about
-          plurality here</a>) and actually i hardly ever front lol, i spend most of my time dormant or in headspace..
+      <p>i'm plural (learn about
+        plurality with this <a href="https://www.youtube.com/watch?v=M34kR9JWWqc" rel="noopener noreferrer">video from body et al</a> or at <a href="https://dragonsroost.neocities.org/pluralstuff" rel="noopener noreferrer">dragon's roost</a>) and actually i hardly ever front lol, i spend most of my time dormant or in headspace..
         but like.... despite that, i think it would be nice to have my own little slice of "real world" here, even if
         it's just on the internet??? and it would be cool to be able to meet people like genuinely as myself and not
         just as part of vance, so... yeah</p>
       <p>you can read more about our collective on <a href="https://entropically.neocities.org/aboutme#jasper">vance's
           about page</a></p>
+      <p>...like i might use this page to talk more about Plural Stuff TM but also i kinda don't fucking want to because i'm sick of all of "my things" inevitably just consisting of talking about the experience of being plural..... like nah i just wanna talk about lizerds or smth ?? ?</p>
     </details>
     <details>
       <summary>tbh the best way to learn about me is just to watch this music video thx (cw: blood, violence - animated)
