margin below headers

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <main>
     <h1>hey i'm jasper 🦎</h1>
-    <h2>and this is my personal site or whatever i guess</h2>
+    <h2 class="margin-bottom-2rem">and this is my personal site or whatever i guess</h2>
     <p>there's not really anything to see here yet so for now you can go look at my <a
         href="https://entropically.neocities.org/">headmate's website</a> ig</p>
     <details>
