Set up layouts or smth

--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&family=Finger+Paint&family=Shizuru&display=swap" rel="stylesheet" />
-  <title>The web site of gurolizard</title>
-  <link href="/style.css" rel="stylesheet" type="text/css" media="all">
-</head>
-
-<body>
-  <main>
+---
+layout: base.html
+title: the web site of gurolizard
+---
     <h1>hey i'm jasper 🦎</h1>
     <h2 class="margin-bottom-2rem">and this is my personal site or whatever i guess</h2>
     <p>there's not really anything to see here yet so for now you can go look at my <a
