Add Mastodon feed

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 layout: base.html
 title: the web site of gurolizard
 ---
+<div class="flex-container">
+  <section>
     <h1>hey i'm jasper 🦎</h1>
     <h2 class="margin-bottom-2rem">and this is my personal site or whatever i guess</h2>
     <p>there's not really anything to see here yet so for now you can go look at my <a
@@ -13,13 +15,18 @@ title: the web site of gurolizard
         and whatever you just pictured. thats me". uh, i tend to be pretty crass and maybe have a dark sense of humor or
         smth?</p>
       <p>i'm plural (learn about
-        plurality with this <a href="https://www.youtube.com/watch?v=M34kR9JWWqc" rel="noopener noreferrer">video from body et al</a> or at <a href="https://dragonsroost.neocities.org/pluralstuff" rel="noopener noreferrer">dragon's roost</a>) and actually i hardly ever front lol, i spend most of my time dormant or in headspace..
+        plurality with this <a href="https://www.youtube.com/watch?v=M34kR9JWWqc" rel="noopener noreferrer">video from
+          body et al</a> or at <a href="https://dragonsroost.neocities.org/pluralstuff"
+          rel="noopener noreferrer">dragon's roost</a>) and actually i hardly ever front lol, i spend most of my time
+        dormant or in headspace..
         but like.... despite that, i think it would be nice to have my own little slice of "real world" here, even if
         it's just on the internet??? and it would be cool to be able to meet people like genuinely as myself and not
         just as part of vance, so... yeah</p>
       <p>you can read more about our collective on <a href="https://entropically.neocities.org/aboutme#jasper">vance's
           about page</a></p>
-      <p>...like i might use this page to talk more about Plural Stuff TM but also i kinda don't fucking want to because i'm sick of all of "my things" inevitably just consisting of talking about the experience of being plural..... like nah i just wanna talk about lizerds or smth ?? ?</p>
+      <p>...like i might use this page to talk more about Plural Stuff TM but also i kinda don't fucking want to because
+        i'm sick of all of "my things" inevitably just consisting of talking about the experience of being plural.....
+        like nah i just wanna talk about lizerds or smth ?? ?</p>
     </details>
     <details>
       <summary>tbh the best way to learn about me is just to watch this music video thx (cw: blood, violence - animated)
@@ -33,3 +40,11 @@ title: the web site of gurolizard
         href="https://twitter.com/gurolizard" rel="noopener noreferrer">twitter</a>--note that these accounts are 18+,
       though (this website will probably also be 18+ once it actually has content lol)</p>
     <p class="large centered">💖🔪🩸</p>
+  </section>
+  <section>
+    <h2>mastodon feed</h2>
+    <a class="mastodon-feed" href="https://plural.cafe/@sooj" data-toot-limit="13" data-toot-account-id="64415"
+      data-exclude-replies="true" data-exclude-reblogs="true">follow me into the Fediverse</a>
+  </section>
+</div>
+<script type="module" src="https://esm.sh/emfed@1"></script>
