move css, edit homepage wording

--- a/src/index.html
+++ b/src/index.html
@@ -37,14 +37,15 @@ title: the web site of gurolizard
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </details>
     <p>you can contact me on <a href="https://plural.cafe/@sooj" rel="me">mastodon</a> or <a
-        href="https://twitter.com/gurolizard" rel="noopener noreferrer">twitter</a>--note that these accounts are 18+,
-      though (this website will probably also be 18+ once it actually has content lol)</p>
+        href="https://twitter.com/gurolizard" rel="noopener noreferrer">twitter</a>--note that my twitter is 18+,
+      though, and my mastodon has <em>occassional</em> nsfw posts that are hidden behind warnings. (this website will probably also be 18+ once it actually has content lol)</p>
     <p class="large centered">💖🔪🩸</p>
   </section>
   <section>
     <h2>mastodon feed</h2>
-    <a class="mastodon-feed" href="https://plural.cafe/@sooj" data-toot-limit="13" data-toot-account-id="64415"
+    <a class="mastodon-feed" href="https://plural.cafe/@sooj" data-toot-limit="13" 
       data-exclude-replies="true" data-exclude-reblogs="true">follow me into the Fediverse</a>
+      <!-- data-toot-account-id="64415" -->
   </section>
 </div>
 <script type="module" src="https://esm.sh/emfed@1"></script>
