swap to mastofeed

--- a/src/index.html
+++ b/src/index.html
@@ -43,8 +43,6 @@ title: the web site of gurolizard
   </section>
   <section>
     <h2>mastodon feed</h2>
-    <a class="mastodon-feed" href="https://mastodon.social/@gurolizard" data-toot-limit="13" 
-      data-exclude-replies="true" data-exclude-reblogs="true">follow me into the Fediverse</a>
+    <iframe allowfullscreen sandbox="allow-top-navigation allow-scripts allow-popups allow-popups-to-escape-sandbox" width="320" height="700" src="https://mastofeed.com/apiv2/feed?userurl=https%3A%2F%2Fmastodon.social%2Fusers%2Fgurolizard&theme=dark&size=100&header=false&replies=false&boosts=false"></iframe>
   </section>
 </div>
-<script type="module" src="https://esm.sh/emfed@1"></script>
