1. Center mastodon, 2. list plans, 3. add assets

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,15 @@ title: the web site of gurolizard
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </details>
+    <details>
+      <summary>other pages and stuff i wanna add here later...</summary>
+      <ul>
+        <li>dumb pages just yellin about things i like, such as lizards and my fav BL manga</li>
+        <li>blog!! for even more pointless yelling!!</li>
+        <li>archive of all my past tweets/toots from my old twitter and mastodon accounts lol</li>
+        <li>blinkies and shit once i get freezeframe installed</li>
+      </ul>
+    </details>
     <p>you can contact me on <a href="https://mastodon.social/@gurolizard" rel="me">mastodon</a> or <a
         href="https://twitter.com/gurolizard" rel="noopener noreferrer">twitter</a>--note that my twitter is 18+,
       though, and my mastodon has <em>occassional</em> nsfw posts that are hidden behind warnings. (this website will probably also be 18+ once it actually has content lol)</p>
@@ -43,6 +52,6 @@ title: the web site of gurolizard
   </section>
   <section>
     <h2>mastodon feed</h2>
-    <iframe allowfullscreen sandbox="allow-top-navigation allow-scripts allow-popups allow-popups-to-escape-sandbox" width="320" height="700" src="https://mastofeed.com/apiv2/feed?userurl=https%3A%2F%2Fmastodon.social%2Fusers%2Fgurolizard&theme=dark&size=100&header=false&replies=false&boosts=false"></iframe>
+    <iframe allowfullscreen sandbox="allow-top-navigation allow-scripts allow-popups allow-popups-to-escape-sandbox" width="320" height="700" src="https://mastofeed.com/apiv2/feed?userurl=https%3A%2F%2Fmastodon.social%2Fusers%2Fgurolizard&theme=dark&size=100&header=false&replies=true&boosts=false"></iframe>
   </section>
 </div>
