Mina font, replace emojis with SVGs

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,11 @@ title: the web site of gurolizard
     <p>you can contact me on <a href="https://mastodon.social/@gurolizard" rel="me">mastodon</a> or <a
         href="https://twitter.com/gurolizard" rel="noopener noreferrer">twitter</a>--note that my twitter is 18+,
       though, and my mastodon has <em>occassional</em> nsfw posts that are hidden behind warnings. (this website will probably also be 18+ once it actually has content lol)</p>
-    <p class="large centered">💖🔪🩸</p>
+    <p class="centered">
+      <img class="big-emoji" src="/assets/img/sparkling-heart.svg" alt="sparkling heart emoji">
+      <img class="big-emoji" src="/assets/img/knife.svg" alt="kitchen knife emoji">
+      <img class="big-emoji" src="/assets/img/blood.svg" alt="drop of blood emoji">
+    </p>
   </section>
   <section>
     <h2>mastodon feed</h2>
