i continue to dfk

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,12 @@ title: the web site of gurolizard
         <li>blinkies and shit once i get freezeframe installed</li>
       </ul>
     </details>
+    <details>
+      <summary>blinkies!!!</summary>
+      <div class="buttons blinkies">
+        <img class="freezeframe" src="/assets/img/blinkies/catboyrights.gif" alt="catboy rights">
+      </div>
+    </details>
     <p>you can contact me on <a href="https://mastodon.social/@gurolizard" rel="me">mastodon</a> or <a
         href="https://twitter.com/gurolizard" rel="noopener noreferrer">twitter</a>--note that my twitter is 18+,
       though, and my mastodon has <em>occassional</em> nsfw posts that are hidden behind warnings. (this website will probably also be 18+ once it actually has content lol)</p>
