--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@ title: the web site of gurolizard
 ---
 <div class="flex-container">
   <section>
-    <h1>hey i'm jasper 🦎</h1>
-    <h2 class="margin-bottom-2rem">and this is my personal site or whatever i guess</h2>
+    <h1 class="centered">hey i'm jasper 🦎</h1>
+    <h2 class="centered margin-bottom-2rem">and this is my personal site or whatever i guess</h2>
     <p>there's not really anything to see here yet so for now you can go look at my <a
         href="https://entropically.neocities.org/">headmate's website</a> ig</p>
     <details>
@@ -61,7 +61,7 @@ title: the web site of gurolizard
     </p>
   </section>
   <section>
-    <h2>mastodon feed</h2>
+    <h2 class="centered">mastodon feed</h2>
     <iframe allowfullscreen sandbox="allow-top-navigation allow-scripts allow-popups allow-popups-to-escape-sandbox" width="320" height="700" src="https://mastofeed.com/apiv2/feed?userurl=https%3A%2F%2Fmastodon.social%2Fusers%2Fgurolizard&theme=dark&size=100&header=false&replies=true&boosts=false"></iframe>
   </section>
 </div>
