shuffling layouts, styling headers and margins just so i can avoid having the header on the home page pretty much

--- a/src/site.html
+++ b/src/site.html
@@ -1,5 +1,5 @@
 ---
-layout: layouts/base.njk
+layout: layouts/main.njk
 title: credits | gurolizard
 ---
 <section id="credits">
@@ -12,6 +12,7 @@ title: credits | gurolizard
                 rel="noopener noreferrer">kalechips</a>
         </li>
         <li>gif pausing provided by <a href="https://www.npmjs.com/package/freezeframe" rel="noopener noreferrer">freezeframe.js</a>, implemented thanks to <a href="https://bechnokid.neocities.org/tutorials/freezeframe/" rel="noopener noreferrer">bechno kid's tutorial</a></li>
+        <li>mastodon embed provided by <a href="https://mastofeed.com/" rel="noopener noreferrer">mastofeed</a></li>
         <li>built with <a href="https://11ty.dev" rel="noopener noreferrer">11ty</a>🎈</li>
     </ul>
     <h3>graphics</h3>
