--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 ---
-layout: layouts/base.njk
+layout: layouts/home.njk
 title: the web site of gurolizard
 ---
 <div class="flex-container">
   <section>
-    <h1 class="centered">hey i'm jasper 🦎</h1>
+    <h1 class="centered title">hey i'm jasper 🦎</h1>
     <h2 class="centered margin-bottom-2rem">and this is my personal site or whatever i guess</h2>
     <p>there's not really anything to see here yet so for now you can go look at my <a
         href="https://entropically.neocities.org/">headmate's website</a> ig</p>
